feat: finish release v1

--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-conventional": "17.1.0",
     "@temir/cli": "^0.0.16",
+    "@temir/tab": "^0.0.19",
     "@types/node": "18.7.13",
     "bumpp": "8.2.1",
     "eslint": "8.23.0",
+    "fast-glob": "^3.2.12",
     "lint-staged": "13.0.3",
     "pnpm": "7.9.5",
     "simple-git-hooks": "2.8.0",
