--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@alexzzz/npms",
-  "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@7.9.5",
   "description": "",
@@ -38,8 +37,7 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup",
+    "build": "temir build src/main.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prepublishOnly": "pnpm build",
@@ -69,7 +67,6 @@
     "pnpm": "7.9.5",
     "simple-git-hooks": "2.8.0",
     "taze": "0.8.0",
-    "tsup": "6.2.3",
     "tsx": "3.9.0",
     "typescript": "4.8.2",
     "unplugin-auto-import": "0.11.2",
