chore: update sctips

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prepublishOnly": "pnpm build",
-    "release": "bumpp --commit --push --tag && npm publish",
+    "release": "bumpp --commit --push --tag && pnpm publish --access public",
     "start": "temir src/main.ts",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
