--- a/package.json
+++ b/package.json
@@ -42,16 +42,13 @@
     "prepare": "simple-git-hooks",
     "up": "taze"
   },
-  "dependencies": {
-    "@temir/core": "^0.0.16",
-    "@temir/select-input": "^0.0.16",
-    "vue": "^3.2.37"
-  },
   "devDependencies": {
     "@alexzzz/eslint-config": "1.4.0",
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-conventional": "17.1.0",
     "@temir/cli": "^0.0.16",
+    "@temir/core": "^0.0.19",
+    "@temir/select-input": "^0.0.19",
     "@temir/tab": "^0.0.19",
     "@types/node": "18.7.13",
     "bumpp": "8.2.1",
@@ -64,7 +61,8 @@
     "tsx": "3.9.0",
     "typescript": "4.8.2",
     "unplugin-auto-import": "0.11.2",
-    "vitest": "0.17.1"
+    "vitest": "0.17.1",
+    "vue": "^3.2.39"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged",
