--- a/package.json
+++ b/package.json
@@ -42,18 +42,21 @@
     "prepare": "simple-git-hooks",
     "up": "taze"
   },
-  "devDependencies": {
-    "@alexzzz/eslint-config": "1.4.0",
-    "@commitlint/cli": "17.1.2",
-    "@commitlint/config-conventional": "17.1.0",
+  "dependencies": {
     "@temir/cli": "^0.0.16",
     "@temir/core": "^0.0.19",
     "@temir/select-input": "^0.0.19",
     "@temir/tab": "^0.0.19",
+    "fast-glob": "^3.2.12",
+    "vue": "^3.2.39"
+  },
+  "devDependencies": {
+    "@alexzzz/eslint-config": "1.4.0",
+    "@commitlint/cli": "17.1.2",
+    "@commitlint/config-conventional": "17.1.0",
     "@types/node": "18.7.13",
     "bumpp": "8.2.1",
     "eslint": "8.23.0",
-    "fast-glob": "^3.2.12",
     "lint-staged": "13.0.3",
     "pnpm": "7.9.5",
     "simple-git-hooks": "2.8.0",
@@ -61,8 +64,7 @@
     "tsx": "3.9.0",
     "typescript": "4.8.2",
     "unplugin-auto-import": "0.11.2",
-    "vitest": "0.17.1",
-    "vue": "^3.2.39"
+    "vitest": "0.17.1"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged",
