--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "main": "./dist/index.js",
   "files": [
-    "dist"
+    "dist",
+    "screenshots"
   ],
   "bin": {
     "npms": "./cli.mjs"
