feat: support version check

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@temir/select-input": "^0.0.19",
     "@temir/tab": "^0.0.19",
     "fast-glob": "^3.2.12",
+    "node-fetch": "^3.2.10",
     "vue": "3.2.37"
   },
   "devDependencies": {
